updated all the files

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,12 +3,15 @@
 
     <div>
         <div>
-            <h1 style="color: deeppink;">About BloomsTrade</h1>
+            <h1 style="color: rgb(255, 192, 20);">About Kite Traders</h1>
         </div>
         <div>
             <p style="color: white; font-size: 15pt;font-weight: 400;">
-                This project is inspired by my passion for stock trading and coding. This is a Python web application using
-                Flask, Werkzeug exceptions and security, SQLite3, Requests, Jinja, Bootstrap4, Javascript, HTML5, and CSS3.
+                This project is made up of using Flask python framework, where the user can buy & sell the stocks.
+                The new user will by default have 10000$ to enter to the market. To Buy and sell the stock, we included IEX cloud API_KEY to fetch the current market data.
+                Hence, according to the current market price, the stock will be bought and the same will be done while selling the stock.
+                The portfolio get updated automatically after the events.
+                
             </p>
         </div>
         
