--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,28 +3,28 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Bloom$Trade</title>
+  <title>KiteTraders</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
-  <!-- Favicons -->
+
   <link href="static/img/favicon.png" rel="icon">
   <link href="static/img/apple-touch-icon.png" rel="apple-touch-icon">
-  <!-- Google Fonts -->
+
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <!-- Boxicons - Use Online CDN -->
+
   <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
   <!-- Animate on scroll - used CDN link instead -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <!-- Boxicons -->
+
   <link href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
   <script type="module" src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule="" src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.js"></script>
-  <!-- Template Main CSS File -->
+
   <link href="static/css/style.css" rel="stylesheet">
 </head>
 <body>
-  <!-- ======= Header ======= -->
+
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex d-md-inline-flex-row justify-content-between">
       <h1 class="logo d-flex align-items-center"><a href="/">Kite Traders</a></h1>
@@ -45,10 +45,10 @@
                 <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
             </ul>
         {% endif %}
-      </nav><!-- .nav-menu -->
+      </nav>
     </div>
-  </header><!-- End Header -->
-  <!-- ======= Hero Body Section ======= -->
+  </header>
+
   <section id="hero" class="d-flex align-items-center">
     {% if get_flashed_messages() %}
         <header>
@@ -58,13 +58,13 @@
         </header>
     {% endif %}
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
-      <!-- MAIN BLOCK  -->
+
       <main id=main class="container">
         {% block main %}{% endblock %}
       </main>
     </div>
-  </section><!-- End Hero -->
-  <!-- ======= Footer ======= -->
+  </section>
+ 
   <footer id="footer">
     <div class="container">
 
@@ -77,27 +77,20 @@
         <a href="#" class="linkedin"><ion-icon name="logo-linkedin"></ion-icon></a>
       </div>
     </div>
-  </footer><!-- End  Footer -->
+  </footer>
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
-  <!-- Vendor JS Files -->
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-  <!-- Third party plugin JS-->
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://pagecdn.io/lib/waypoints/4.0.1/jquery.waypoints.min.js" crossorigin="anonymous" integrity="sha256-jDnOKIOq2KNsQZTcBTEnsp76FnfMEttF6AV2DF2fFNE=" ></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <!-- Template Main JS File -->
+
   <script src="static/js/main.js"></script>
 </body>
 </html>
 
-
-  <!-- =======================================================
-  * Template Name: Kelly - v2.0.0
-  * Template URL: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
