--- a/templates/quote1.html
+++ b/templates/quote1.html
@@ -9,7 +9,7 @@
 <div class="tickerSearchBar" style="padding-top: 3%;">
     <form action="/quote" method="POST">
         <div class="form-group d-inline-flex flex-direction-row">
-            <label for="ticker" style="font-weight: bolder; margin-right: 2%; padding-top: 2%; color: deeppink;">Ticker</label>
+            <label for="ticker" style="font-weight: bolder; margin-right: 2%; padding-top: 2%; color: rgb(212, 255, 20);">Stock Name</label>
             <input type="text" class="form-control" style="width: 40%; margin-right: 2%;" name="tickerInput" id="tickerInput" placeholder="Symbol" onkeyup="this.value = this.value.toUpperCase();">
             <button class="btn btn-primary"type="submit">Search</button>
         </div>
