--- a/static/css/style.css
+++ b/static/css/style.css
@@ -116,7 +116,7 @@ h1, h2, h3, h4, h5, h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
-  background: #e9e8e6;
+  background: #d8be98;
   box-shadow: 0px 0px 25px 0 rgba(0, 0, 0, 0.08);
   z-index: 997;
   padding: 15px 0;
@@ -418,7 +418,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 96.5vh;
   /* padding-top: 8%; */
   /* padding-bottom: 8%; */
-  background: url("../img/trade-bg.jpg") top right;
+  background: url("../img/trade-bg-app.jpeg") top right;
   background-size: cover;
   opacity: 90%;
 }
