--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 
     <div>
         <div>
-            <h1 style="color: rgb(255, 192, 20);">About Kite Traders</h1>
+            <h1 style="color: rgb(255, 192, 20);">About our application</h1>
         </div>
         <div>
             <p style="color: white; font-size: 15pt;font-weight: 400;">
